# blink1-mic-monitor

./: Cargo.toml  README.md  blink1-mic-monitor.desktop  install.sh  main.py  pyproject.toml  uninstall.sh
src/: main.rs
systemd/: micmute-status-monitor.service
